[package]
name = "hashcash"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.8", features = ["ws"] }
futures = "0.3.31"
hex = "0.4.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
tokio = { version = "1.49.0", features = ["full", "sync"] }
tokio-tungstenite = "0.28.0"
tower-http = { version = "0.6.8", features = ["fs", "cors"] }
